Login Authentication User and New Functions

--- a/django_init/frontend/src/views/Agendar/agendar.css
+++ b/django_init/frontend/src/views/Agendar/agendar.css
@@ -7,3 +7,9 @@
 .space > div {
     margin: 20px 20px;
 }
+.align-flex{
+    text-align: center;
+}
+.align-fex-bottoms{
+    justify-content: center;
+}
